data/stackoverflow-snippets/cpp/191
$ g++ main.cpp rational.cpp -w -o program
main.cpp: In function ‘int main()’:
main.cpp:33:58: error: no match for ‘operator<<’ (operand types are ‘std::basic_ostream<char>’ and ‘rational’)
     cout << "\tr1 * r2 = " << r1 << " * " << r2 << " = " << r1.multiply(r2) << endl;
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
....skip... no known conversion for ...
In file included from main.cpp:1:0:
rational.h:13:21: note: candidate: std::ostream& operator<<(std::ostream&, rational&) <near match>
     friend ostream& operator<<(ostream &, rational&);
                     ^~~~~~~~
rational.h:13:21: note:   conversion of argument 2 would be ill-formed:
main.cpp:33:72: error: invalid initialization of non-const reference of type ‘rational&’ from an rvalue of type ‘rational’
     cout << "\tr1 * r2 = " << r1 << " * " << r2 << " = " << r1.multiply(r2) << endl;
                                                             ~~~~~~~~~~~^~~~
main.cpp:34:58: error: no match for ‘operator<<’ (operand types are ‘std::basic_ostream<char>’ and ‘rational’)
     cout << "\tr1 / r2 = " << r1 << " / " << r2 << " = " << r1.divide(r2) << endl;
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
